--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:id="@+id/mainscreen"
-    android:background="#282828"    android:orientation="vertical">
+    android:background="#282828">
 
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
         android:layout_marginBottom="15dp"
@@ -27,7 +27,7 @@
             android:layout_rowSpan="7" />
 
         <TextView
-            android:layout_width="176dp"
+            android:layout_width="match_parent"
             android:layout_height="49dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/tvresult"
@@ -38,251 +38,239 @@
     </GridLayout>
 
     <GridLayout
-        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
-        android:layout_height="438dp"
+        android:layout_height="612dp"
         android:layout_row="1"
         android:layout_column="0">
 
         <GridLayout
-            android:background="#282828"
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_row="0"
-            android:layout_column="0">
+            android:layout_height="552dp"
+            android:layout_row="8"
+            android:layout_column="6" >
 
-            <Button
-                
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="1"
-                android:background="#c1c0bf"
-                android:textSize="30dp"
-                android:id="@+id/num1"
+            <GridLayout
+                android:background="#282828"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_row="0"
+                android:layout_column="0" >
+
+                <Button
+                    android:id="@+id/num1"
+                    android:text="1"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:id="@+id/num2"
+                    android:text="2"
+                    android:textColor="#000000"
+                    android:textSize="32sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:id="@+id/num3"
+                    android:text="3"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:textSize="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="C"
+                    android:id="@+id/bcan"
+                    android:layout_row="0"
+                    android:layout_column="3"
+                    android:background="@drawable/opbuttons"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+            </GridLayout>
+
+            <GridLayout
+                android:background="#282828"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_row="1"
+                android:layout_column="0" >
+
+                <Button
+                    android:id="@+id/num4"
+                    android:text="4"
+                    android:textColor="#000000"
+                    android:textSize="32sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp" />
+
+                <Button
+                    android:id="@+id/num5"
+                    android:text="5"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp" />
+
+                <Button
+                    android:id="@+id/num6"
+                    android:text="6"
+                    android:textColor="#000000"
+                    android:textSize="32sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:textSize="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="+"
+                    android:id="@+id/badd"
+                    android:layout_row="0"
+                    android:layout_column="3"
+                    android:background="@drawable/opbuttons"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+            </GridLayout>
+
+            <GridLayout
+                android:background="#282828"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_row="2"
+                android:layout_column="0" >
+
+                <Button
+                    android:id="@+id/num7"
+                    android:text="7"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:id="@+id/num8"
+                    android:text="8"
+                    android:textColor="#000000"
+                    android:textSize="32sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:id="@+id/num9"
+                    android:text="9"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:textSize="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="-"
+                    android:id="@+id/bsub"
+                    android:layout_row="0"
+                    android:layout_column="3"
+                    android:background="@drawable/opbuttons"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+            </GridLayout>
+
+            <GridLayout
+                android:background="#282828"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_row="3"
+                android:layout_column="0" >
+
+                <Button
+                    android:textSize="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="*"
+                    android:background="@drawable/opbuttons"
+                    android:id="@+id/bmult"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:id="@+id/num0"
+                    android:text="0"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/buttonshape"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:textSize="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="/"
+                    android:id="@+id/bdiv"
+                    android:layout_row="0"
+                    android:layout_column="2"
+                    android:background="@drawable/opbuttons"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+
+                <Button
+                    android:textSize="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="="
+                    android:textColor="#ffa800"
+                    android:id="@+id/bequal"
+                    android:layout_row="0"
+                    android:layout_column="3"
+                    android:background="@drawable/buttonalt"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="12dp" />
+            </GridLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="  Tip : Long hold C to clear the screen"
+                android:textColor="#CCCCCC"
+                android:id="@+id/textView"
+                android:layout_row="4"
                 android:layout_column="0" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="2"
-                android:background="#ffffff"
-                android:id="@+id/num2"
-                android:layout_row="0"
-                android:layout_column="1" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="3"
-                android:background="#c1c0bf"
-                android:id="@+id/num3"
-                android:layout_row="0"
-                android:layout_column="2" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="C"
-                android:background="#ffa800"
-                android:id="@+id/bcan"
-                android:layout_row="0"
-                android:layout_column="3" />
-        </GridLayout>
-
-        <GridLayout
-            android:background="#282828"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_row="1"
-            android:layout_column="0" >
-
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="4"
-                android:background="#ffffff"
-                android:id="@+id/num4"
-                android:layout_row="0"
-                android:layout_column="0" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="5"
-                android:background="#c1c0bf"
-                android:id="@+id/num5"
-                android:layout_row="0"
-                android:layout_column="1" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="6"
-                android:background="#ffffff"
-                android:id="@+id/num6"
-                android:layout_row="0"
-                android:layout_column="2" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="+"
-                android:background="#ffa800"
-                android:id="@+id/badd"
-                android:layout_row="0"
-                android:layout_column="3" />
-        </GridLayout>
-
-        <GridLayout
-            android:background="#282828"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_row="2"
-            android:layout_column="0" >
-
-            <Button
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="7"
-                android:background="#c1c0bf"
-                android:id="@+id/num7"
-                android:layout_row="0"
-                android:layout_column="0" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="8"
-                android:background="#ffffff"
-                android:id="@+id/num8"
-                android:layout_row="0"
-                android:layout_column="1" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="9"
-                android:background="#c1c0bf"
-                android:id="@+id/num9"
-                android:layout_row="0"
-                android:layout_column="2" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="-"
-                android:background="#ffa800"
-                android:id="@+id/bsub"
-                android:layout_row="0"
-                android:layout_column="3" />
-        </GridLayout>
-
-        <GridLayout
-            android:background="#282828"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_row="3"
-            android:layout_column="0" >
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="*"
-                android:background="#ffa800"
-                android:id="@+id/bmult"
-                android:layout_row="0"
-                android:layout_column="0" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="0"
-                android:background="#c1c0bf"
-                android:id="@+id/num0"
-                android:layout_row="0"
-                android:layout_column="1" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="/"
-                android:background="#ffa800"
-                android:id="@+id/bdiv"
-                android:layout_row="0"
-                android:layout_column="2" />
-
-            <Button
-                
-                android:textSize="30dp"
-                android:layout_columnWeight="3"
-                android:layout_rowWeight="3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:background="#ffffff"
-                android:text="="
-                android:textColor="#ffa800"
-                android:id="@+id/bequal"
-                android:layout_row="0"
-                android:layout_column="3" />
         </GridLayout>
     </GridLayout>
+
 </GridLayout>
